--- a/index.html
+++ b/index.html
@@ -1,34 +1,40 @@
 <!DOCTYPE html>
 <html lang="fr" class="scroll-smooth">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Chalet Risoul | Location de Luxe à Risoul Village</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Playfair+Display:ital,wght@0,400;0,600;0,700;1,400&display=swap" rel="stylesheet">
-    <script>
-      tailwind.config = {
-        theme: {
-          extend: {
-            colors: {
-              'chalet-warm': '#91412B', // Terracotta Chaleureux
-              'chalet-gold': '#B48446', // Bronze Doré
-              'chalet-wood': '#5D4037', // Bois Sombre
-              'chalet-cream': '#FDFBF7', // Beige Cachemire
-              'chalet-soft': '#F4EFEA', // Sable Doux
-            },
-            fontFamily: {
-              sans: ['Lato', 'sans-serif'],
-              serif: ['Playfair Display', 'serif'],
-            },
-          }
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Chalet Risoul | Location de Luxe à Risoul Village</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Playfair+Display:ital,wght@0,400;0,600;0,700;1,400&display=swap"
+    rel="stylesheet">
+  <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          colors: {
+            'chalet-warm': '#91412B', // Terracotta Chaleureux
+            'chalet-gold': '#B48446', // Bronze Doré
+            'chalet-wood': '#5D4037', // Bois Sombre
+            'chalet-cream': '#FDFBF7', // Beige Cachemire
+            'chalet-soft': '#F4EFEA', // Sable Doux
+          },
+          fontFamily: {
+            sans: ['Lato', 'sans-serif'],
+            serif: ['Playfair Display', 'serif'],
+          },
         }
       }
-    </script>
-  <body class="bg-chalet-cream text-gray-800 antialiased font-sans">
-    <div id="root"></div>
-    <script type="module" src="/index.tsx"></script>
-  </body>
+    }
+  </script>
+</head>
+
+<body class="bg-chalet-cream text-gray-800 antialiased font-sans">
+  <div id="root"></div>
+  <script type="module" src="/index.tsx"></script>
+</body>
+
 </html>
